--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,29 +1,13 @@
 header{
     display: flex;
-    min-height: 5rem;
-    
-    // margin: 0.5rem;
     justify-content: space-between;
     align-items: center;
-
     gap: 1rem;
     
-
+    min-height: 5rem;
     
-
-    
+   
 }
-
-.sticky{
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    background-color: $grey;
-    backdrop-filter: blur(2rem);
-}
-
-
 
 .logo{
     display: flex;
@@ -38,24 +22,47 @@ header{
     font-size: 1rem;
     overflow: hidden;
 
-    
-
     img{
         color: black;
         width: 8rem;
     }
-
+    //*logo name
     div{
         display: flex;
         flex-direction: column;
-        span{
-            font-size: 10px;
-        }
     }
     
     &:hover{
         transform: scale(1.3);
     }
+}
+//*for the fixed navbar
+.fixed {
+	width: 100%;
+    position: fixed;
+    top: 0;
+    z-index: 9;
+    background: rgba(255,255,255, .8);
+    height: 80px;
+}
+.fixed .logo {
+    margin-top: 20px;
+    margin-left: -100px;
+}
+.fixed .logo img {
+    width: 200px !important;
+}
+.fixed .btn {
+    border-color: #0083ae;
+    color: #0083ae;
+}
+.fixed .btn-white {
+    top: 25px;
+}
+.fixed .hamburger {
+    top: 25px;
+    -webkit-filter: brightness(0);
+    filter: brightness(0);
 }
 
 .menu{
@@ -73,7 +80,7 @@ header{
     }
 }
 
-.menu-nav-toggle{
+.burger{
     z-index: 999;
     width: 1.5rem;
 
@@ -87,10 +94,31 @@ header{
     gap: 0.4rem;
     
     background-color: transparent;
+
+    margin-right: 2.5rem;
+    transition: transform 500ms ease-in;
     span{
         background-color: black;
         width: 100%;
         height: 4px;
+        border-radius: 50px;
+    }
+    &:hover{
+        span{
+        &:nth-of-type(1){
+            transform: rotate(45deg)
+            translate(6.8px, 6.5px);
+    
+        }
+        &:nth-of-type(2){
+            opacity: 0;
+        }   
+        &:nth-of-type(3){
+            transform: rotate(-45deg) 
+            translate(8px, -8px);
+        }
+        }
+        
     }
 }
 
@@ -125,31 +153,6 @@ header{
     margin-inline-end: 0.5rem;
 }
   
-.menu-nav-toggle{
-    display: flex;
-    margin-right: 2.5rem;
-    transition: transform 500ms ease-in;
-
-    
-
-    &:hover{
-        span{
-        &:nth-of-type(1){
-            transform: rotate(45deg)
-            translate(6.8px, 6.5px);
-
-        }
-        &:nth-of-type(2){
-            opacity: 0;
-        }   
-        &:nth-of-type(3){
-            transform: rotate(-45deg) 
-            translate(8px, -8px);
-        }
-        }
-        
-    }
-}
 
 .primary-navigation{
     display: none;
