--- a/scss/style.scss
+++ b/scss/style.scss
@@ -7,5 +7,6 @@
 @import 'layout/footer';
 @import 'layout/header';
 @import 'pages/home';
+@import 'pages/room';
 @import 'components/card';
 @import 'components/button';
