--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -838,13 +838,19 @@ footer p {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  width: 70vw;
-  gap: 3rem;
 }
 
-.room-content {
+.room-list-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 70vw;
+  gap: 2rem;
+}
+
+.room-item {
   width: 49%;
-  min-height: 70rem;
+  max-height: 100rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -852,21 +858,13 @@ footer p {
   -webkit-box-direction: normal;
       -ms-flex-flow: column wrap;
           flex-flow: column wrap;
+  font-family: "Nunito", sans-serif;
 }
 
-.room-content img {
-  width: 100%;
-  height: 30%;
-  -o-object-fit: cover;
-     object-fit: cover;
-  -o-object-position: center;
-     object-position: center;
-}
-
-.room-content .desc {
+.room-item .room-content {
+  height: 25rem;
   background-color: #fafafa;
-  padding: 2rem;
-  gap: 2.5rem;
+  padding: 1rem 2rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -880,44 +878,55 @@ footer p {
   text-align: start;
 }
 
-.room-content .desc h3 {
-  font-weight: 400;
-  font-size: 2.5rem;
-}
-
-.amenities {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-flow: column wrap;
-          flex-flow: column wrap;
-}
-
-.amenities h4 {
+.room-item .room-content .room-title {
+  font-weight: 500;
+  font-size: 1.5rem;
   margin-bottom: 1rem;
 }
 
-.amenities .amenities-icon-wrap {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-.amenities .amenities-icon-wrap .amenities-icon {
-  width: 50%;
-  font-size: 1rem;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
-}
-
-.amenities .amenities-icon-wrap .amenities-icon p {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+.room-item .room-content .room-description {
+  font-weight: 300;
   margin-bottom: 1rem;
+}
+
+.room-image {
+  background-color: aqua;
+}
+
+.room-benefits {
+  color: #4d4d4d;
+}
+
+.room-benefits-label {
+  margin-bottom: 0.7rem;
+}
+
+.room-benefits ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  color: #494848;
+  list-style-type: none;
+}
+
+.room-benefits ul li {
+  width: 49%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.room-benefits ul li img {
+  height: 1rem;
+  width: 1rem;
+  margin-right: 1rem;
+  margin-bottom: 0.7rem;
+}
+
+.room-utility {
+  padding-top: 2rem;
 }
 
 .card {
