--- a/scss/pages/_room.scss
+++ b/scss/pages/_room.scss
@@ -1,4 +1,6 @@
 
+
+
 .hero{
     min-height: 60vh;
 }
@@ -42,63 +44,97 @@
 
 .room-list{
     display: flex;
-    width: 70vw;
-    gap: 3rem;
+    
 }
 
-.room-content{
-    width: 49%;
-    min-height: 70rem;
+.room-list-wrapper{
     display: flex;
-    
+    width: 70vw;
+    gap: 2rem;
+}
+
+
+
+.room-item{
+    width: 49%;
+    max-height: 100rem;
+    display: flex;
+    // flex-direction: column;
     flex-flow: column wrap;
-    
+    font-family: $title-font;
 
-    img{
-        width: 100%;
-        height: 30%;
-        object-fit: cover;
-        object-position: center;
-    }
-
-    .desc{
+    .room-content{
+        height: 25rem;
         background-color: $grey;
-        padding: 2rem;
-        gap:  2.5rem;
-
-    
+        padding: 1rem 2rem;
+        
         display: flex;
         flex-direction: column;
         
         justify-content: center;
         text-align: start;
 
-        h3{
-            font-weight: 400;
-            font-size: 2.5rem;
-        }
-        
-    }
-}
-.amenities{
-    display: flex;
-    flex-flow: column wrap;
-    
-    h4{
-        margin-bottom: 1rem;
-    }
-    .amenities-icon-wrap{
-        display: flex;
-
-        .amenities-icon{
-            width: 50%;
-            font-size: 1rem;
-            align-items: flex-start;
-            p{
-                display: flex;
-                margin-bottom: 1rem;
-            }
+        .room-title{
+            font-weight: 500;
+            font-size: 1.5rem;
+            margin-bottom: 1rem;
             
         }
+        .room-description{
+            font-weight: 300;
+            margin-bottom: 1rem;
+
+        }
     }
 }
+
+//*carousel of room-item
+.room-image{
+    background-color: aqua;
+}
+
+
+
+
+
+
+//*display list of amenities
+.room-benefits{
+    color: #4d4d4d;
+
+}
+
+.room-benefits-label{
+    margin-bottom: 0.7rem;
+
+}
+
+.room-benefits ul{
+    display: flex;
+    flex-wrap: wrap;
+    color: #494848;
+    list-style-type: none;
+    li{
+        width: 49%;
+        display: flex;
+        //*icons
+        img{
+            height: 1rem;
+            width: 1rem;
+            margin-right: 1rem;
+            margin-bottom: 0.7rem;
+
+        };
+    }
+
+}
+
+.room-utility{
+    // border-top: 1px solid #e9e9e9;
+    padding-top: 2rem;
+   
+}
+
+
+
+
