--- a/assets/view/room.html
+++ b/assets/view/room.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <header>
-        <a href="#" class="logo">
+        <a href="/index.html" class="logo">
             <img src="/assets/img/final1-01.png" alt="ferme-logo">
             <div>
                 <p>La ferme rose</p>
