carousel js done

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -8,5 +8,6 @@
 @import 'layout/header';
 @import 'pages/home';
 @import 'pages/room';
+@import 'pages/about';
 @import 'components/card';
 @import 'components/button';
