--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -14,7 +14,7 @@ header{
     align-items: center;
     gap: 0.5rem;
 
-    font-family: $title-font;
+    font-family: $logo-font;
     text-transform: uppercase;
     padding-left: 3rem;
     font-weight: 700;
