--- a/scss/utils/_variables.scss
+++ b/scss/utils/_variables.scss
@@ -18,7 +18,9 @@ $accent-color-fade: lighten($accent-color, 38%);
 
 
 
-$title-font: 'Nunito', sans-serif;
+$logo-font: 'Nunito', sans-serif;
+$title-font: 'Roboto', sans-serif;
+
 
 $main-font: 'Tinos', serif;
 
