--- a/assets/view/room.html
+++ b/assets/view/room.html
@@ -66,8 +66,32 @@
                 <div class="room-list-wrapper">
                     <div class="room-item">
                         <div class="room-image">
-                            
-                          
+                            <div class="carousel">
+                                <button class="carousel__button carousel__button--left is-hidden">
+                                    <img src="/assets/img/icons/previous-fill.png" alt="">
+                                </button>
+                                <div class="carousel__track-container">
+                                    <ul class="carousel__track">
+                                        <li class="carousel__slide current-slide">
+                                            <img class="carousel__image" src="/assets/img/chamande1.jpg" alt="">
+                                        </li>
+                                        <li class="carousel__slide">
+                                            <img class="carousel__image" src="/assets/img/chamande2.jpg" alt="">
+                                        </li>
+                                        <li class="carousel__slide">
+                                            <img class="carousel__image" src="/assets/img/piscine-3-booking.jpg" alt="">
+                                        </li>
+                                    </ul>
+                                </div>
+                                <button class="carousel__button carousel__button--right">
+                                    <img src="/assets/img/icons/next-fill.png" alt="">
+                                </button>
+                                <div class="carousel__nav">
+                                    <button class="carousel__indicator current-slide"></button>
+                                    <button class="carousel__indicator"></button>
+                                    <button class="carousel__indicator"></button>
+                                </div>
+                            </div>
                         </div>
                         <div class="room-content">
                             <div class="room-title">
