--- a/scss/base/_font.scss
+++ b/scss/base/_font.scss
@@ -1,2 +1,3 @@
 
-  @import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200&family=Tinos:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;500;600;700&family=Roboto:wght@100;300;400;500;700&family=Tinos:ital,wght@0,400;0,700;1,400;1,700&display=swap');
