--- a/scss/components/_carousel.scss
+++ b/scss/components/_carousel.scss
@@ -1,8 +1,13 @@
 .carousel{
     position: relative;
-    height: 600px;
-    width: 80%;
+    height: 100%;
+    width: 100%;
     margin: 0 auto;
+    &:hover {
+        .carousel__button{
+            opacity: 1;
+        }
+    }
 
 }
 
@@ -13,8 +18,8 @@
 }
 
 .carousel__track-container {
-    background-color: aqua;
-    
+    // background-color: aqua;
+    // border: 3px solid red;
     height: 100%;
     position: relative;
     overflow: hidden;
@@ -35,6 +40,7 @@
 }
 
 .carousel__button {
+    opacity: 0;
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
@@ -43,14 +49,15 @@
     cursor: pointer;
 
     img{
-     width: 20px;
+     width: 40px;
     }
 }
 .carousel__button--left{
-    left: -30px;
+    left: 5%;
+    z-index: 1;
 }
 .carousel__button--right{
-    right: -30px;
+    right: 5%;
 }
 
 .carousel__nav{
@@ -58,6 +65,11 @@
     display: flex;
     justify-content: center;
     padding: 10px 0;
+    // background-color: pink;
+    position: absolute;
+    bottom: 0;
+    left: 40%;
+    // transform: translateY(-50%);
 }
 
 .carousel__indicator{
@@ -71,7 +83,7 @@
 }
 
 .carousel__indicator.current-slide {
-    background-color: rgba(0, 0, 0, 0.75);
+    background-color: rgba(251, 242, 242, 0.734);
     
 }
 
