final font - inter

--- a/assets/view/room.html
+++ b/assets/view/room.html
@@ -79,7 +79,7 @@
                                             <img class="carousel__image" src="/assets/img/chamande2.jpg" alt="">
                                         </li>
                                         <li class="carousel__slide">
-                                            <img class="carousel__image" src="/assets/img/piscine-3-booking.jpg" alt="">
+                                            <img class="carousel__image" src="/assets/img/chamande3.jpg" alt="">
                                         </li>
                                     </ul>
                                 </div>
