--- a/scss/utils/_variables.scss
+++ b/scss/utils/_variables.scss
@@ -19,7 +19,7 @@ $accent-color-fade: lighten($accent-color, 38%);
 
 
 $logo-font: 'Nunito', sans-serif;
-$title-font: 'Roboto', sans-serif;
+$title-font: 'Inter', sans-serif;
 
 
 $main-font: 'Tinos', serif;
