--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,5 @@
-@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;500;600;700&family=Roboto:wght@100;300;400;500;700&family=Tinos:ital,wght@0,400;0,700;1,400;1,700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;500;600;700&family=Tinos:ital,wght@0,400;0,700;1,400;1,700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600&family=Lato:wght@100;300;400;700&display=swap");
 .about, .experience, .room {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -858,7 +859,7 @@ footer p {
   -webkit-box-direction: normal;
       -ms-flex-flow: column wrap;
           flex-flow: column wrap;
-  font-family: "Roboto", sans-serif;
+  font-family: "Inter", sans-serif;
 }
 
 .room-item .room-image {
@@ -882,8 +883,8 @@ footer p {
   text-align: start;
 }
 
-.room-item .room-content .room-title {
-  font-weight: 300;
+.room-item .room-content .room-title h3 {
+  font-weight: 400;
   font-size: 1.5rem;
   margin-bottom: 1rem;
 }
@@ -987,7 +988,7 @@ footer p {
 }
 
 .btn-light {
-  font-family: "Roboto", sans-serif;
+  font-family: "Inter", sans-serif;
   border: 2px solid #e3cab4;
   color: #e3cab4;
   font-size: 0.9rem;
