--- a/scss/pages/_room.scss
+++ b/scss/pages/_room.scss
@@ -75,8 +75,8 @@
         justify-content: center;
         text-align: start;
 
-        .room-title{
-            font-weight: 300;
+        .room-title h3{
+            font-weight: 400;
             font-size: 1.5rem;
             margin-bottom: 1rem;
             
