setting on javascript for multiple carousel

--- a/assets/view/room.html
+++ b/assets/view/room.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
+    <link rel="shortcut icon" href="#">
     <link rel="stylesheet" href="/assets/css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-brands/css/uicons-brands.css'>
@@ -132,11 +133,37 @@
                         </div>
                     </div>
                     <div class="room-item">
-                        
-                          
+                        <div class="room-image">
+                            <div class="carousel">
+                                <button class="carousel__button carousel__button--left is-hidden">
+                                    <img src="/assets/img/icons/previous-fill.png" alt="">
+                                </button>
+                                <div class="carousel__track-container">
+                                    <ul class="carousel__track">
+                                        <li class="carousel__slide current-slide">
+                                            <img class="carousel__image" src="/assets/img/chemera3.jpg" alt="">
+                                        </li>
+                                        <li class="carousel__slide">
+                                            <img class="carousel__image" src="/assets/img/chemera1.png" alt="">
+                                        </li>
+                                        <li class="carousel__slide">
+                                            <img class="carousel__image" src="/assets/img/chemera2.png" alt="">
+                                        </li>
+                                    </ul>
+                                </div>
+                                <button class="carousel__button carousel__button--right">
+                                    <img src="/assets/img/icons/next-fill.png" alt="">
+                                </button>
+                                <div class="carousel__nav">
+                                    <button class="carousel__indicator current-slide"></button>
+                                    <button class="carousel__indicator"></button>
+                                    <button class="carousel__indicator"></button>
+                                </div>
+                            </div>
+                        </div>  
                         <div class="room-content">
                             <div class="room-title">
-                                <h3>Chambre Amande avec terrasse</h3>
+                                <h3>Chambre Emeraude avec double balcon</h3>
                             </div>
                             <div class="room-description">
                                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magni, recusandae error, nobis accusamus, quam id necessitatibus aliquid quo nam nemo unde voluptates debitis dolor aspernatur.</p>
