--- a/scss/components/_button.scss
+++ b/scss/components/_button.scss
@@ -19,6 +19,19 @@
     }
 }
 
+//attributes on for the button on the header section
+
+.btn.btn-header {
+    border: 2px solid $main-txt-light;
+    color: $main-txt-light;
+    transition: 300ms ease-in;
+    &:hover{
+        background-color: $grey;
+        color: $main-txt-dark;
+        
+    }
+}
+
 .btn-light{
     font-family: $title-font;
     
