--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -31,8 +31,8 @@ header{
         
         width: 8rem;
     }
-    //*logo name
-    div{
+    
+    .logo-name{
         display: flex;
         flex-direction: column;
     }
@@ -41,34 +41,9 @@ header{
         transform: scale(1.3);
     }
 }
-//*for the fixed navbar
-.fixed {
-	width: 100%;
-    position: fixed;
-    top: 0;
-    z-index: 9;
-    background: rgba(255,255,255, .8);
-    height: 80px;
-}
-.fixed .logo {
-    margin-top: 20px;
-    margin-left: -100px;
-}
-.fixed .logo img {
-    width: 200px !important;
-}
-.fixed .btn {
-    border-color: #0083ae;
-    color: #0083ae;
-}
-.fixed .btn-white {
-    top: 25px;
-}
-.fixed .hamburger {
-    top: 25px;
-    -webkit-filter: brightness(0);
-    filter: brightness(0);
-}
+
+
+//*burger
 
 .menu{
     display: flex;
@@ -87,7 +62,7 @@ header{
 
 .burger{
     z-index: 999;
-    width: 1.5rem;
+    width: 2.5rem;
 
     
     aspect-ratio: 1;
@@ -103,7 +78,7 @@ header{
     margin-right: 2.5rem;
     transition: transform 500ms ease-in;
     span{
-        background-color: black;
+        background-color: $main-txt-light;
         width: 100%;
         height: 4px;
         border-radius: 50px;
@@ -127,7 +102,32 @@ header{
     }
 }
 
+//*for the fixed navbar, integrated with JS
+//header's color to white translucent
+.fixed {
+	width: 100%;
+    position: fixed;
+    top: 0;
+    z-index: 9;
+    background: rgba(255,255,255, .8);
+    height: 5rem;
+}
 
+//button color changes to black
+.fixed .btn.btn-header {
+    border-color: $main-txt-dark;
+    color: $main-txt-dark;
+}
+// burger > span ('.line') color changes to black
+.fixed .line {
+    background-color: $main-txt-dark;
+}
+// logo name color changes to black
+.fixed .logo-name{
+    color: $main-txt-dark;
+}
+
+//*navbar within the burger menu
 
 .primary-navigation{
 
