--- a/scss/utils/_variables.scss
+++ b/scss/utils/_variables.scss
@@ -2,6 +2,9 @@
 $grey: #fafafa;
 $rose: #eedfd2;
 $rose-darker: darken($rose, 8%);
+$rose-darken: darken($rose, 25%);
+$rose-light: lighten($rose, 5%);
+$rose-lighter: lighten($rose, 20%);
 $light-pink: #f5efeb;
 
 
