--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;500;600;700&family=Tinos:ital,wght@0,400;0,700;1,400;1,700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600&family=Lato:wght@100;300;400;700&display=swap");
-.about, .experience, .room {
+.about, .room {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -14,7 +14,6 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding: 3rem;
 }
 
 * {
@@ -275,7 +274,7 @@ header {
           justify-content: center;
 }
 
-video {
+.video-hero {
   -o-object-fit: cover;
      object-fit: cover;
   height: 100%;
@@ -286,7 +285,8 @@ video {
 }
 
 .about {
-  min-height: calc(100vh - 20rem);
+  height: 70vh;
+  padding: 3rem;
   background-color: #fafafa;
 }
 
@@ -334,25 +334,31 @@ video {
 }
 
 .accomodation {
-  min-height: 80vh;
-  color: #e3cab4;
-  height: 100%;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.404)), to(rgba(0, 0, 0, 0.511))), url("../../assets/img/chamande2.jpg");
-  background-image: linear-gradient(rgba(0, 0, 0, 0.404), rgba(0, 0, 0, 0.511)), url("../../assets/img/chamande2.jpg");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
+  min-height: 100vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: reverse;
+      -ms-flex-direction: row-reverse;
+          flex-direction: row-reverse;
 }
 
-.accomodation-txt {
-  margin: 0 auto;
-  width: 50%;
+.accomodation-image {
+  width: 70vw;
+}
+
+.accomodation-image img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+
+.accomodation-info {
+  background-color: #eedfd2;
+  min-height: 100%;
+  width: 30vw;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -360,63 +366,50 @@ video {
   -webkit-box-direction: normal;
       -ms-flex-flow: column wrap;
           flex-flow: column wrap;
-  padding: 2rem 2rem;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  gap: 2rem;
+  padding: 2rem 3rem;
   font-family: "Tinos", serif;
+  color: #020202;
 }
 
-.accomodation-txt p {
-  text-align: center;
-  font-size: 1.2rem;
-  font-weight: 300;
-  margin-bottom: 1.2rem;
+.accomodation-info h2 {
+  font-weight: 400;
+  font-size: 5rem;
+}
+
+.wrap-info {
+  padding-left: 5rem;
+  float: right;
+}
+
+.wrap-info h3 {
+  position: relative;
+  font-weight: 400;
+  font-size: 2.5rem;
+  text-align: left;
+  margin-bottom: 3rem;
+}
+
+.wrap-info h3::before {
+  content: "";
+  width: 5rem;
+  height: 1px;
+  background-color: #020202;
+  position: absolute;
+  top: 40%;
+  left: -100px;
+}
+
+.wrap-info p {
+  font-size: 0.9rem;
+  margin-bottom: 3rem;
 }
 
 .experience {
   min-height: 100vh;
-  background-color: #f5efeb;
-}
-
-.experience h2 {
-  font-family: "Tinos", serif;
-  font-weight: 400;
-  font-size: 9rem;
-  color: #e3cab4;
-  margin-top: 2rem;
-  position: relative;
-  left: -320px;
-  top: 35px;
-  position: relative;
-  z-index: 1;
-}
-
-.experience-content {
-  width: 80vw;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
-.experience-content img {
-  width: 49%;
-  height: 80vh;
-  -o-object-fit: cover;
-     object-fit: cover;
-  -o-object-position: center;
-     object-position: center;
-}
-
-.experience-content .desc {
-  background-color: #fafafa;
-  padding: 5rem;
-  width: 49%;
-  min-height: 30vh;
-  gap: 2.5rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -427,12 +420,87 @@ video {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  text-align: start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 4rem 0;
+  background-color: #f5efeb;
 }
 
-.experience-content .desc h3 {
+.experience h2 {
+  position: relative;
+  font-family: "Tinos", serif;
+  font-weight: 400;
+  font-size: 9rem;
+  color: #e3cab4;
+  right: 30rem;
+  top: 35px;
+  z-index: 1;
+}
+
+.wrap-experience {
+  width: 60vw;
+}
+
+.experience-content {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.experience-content img {
+  width: 49%;
+  height: 50vh;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
+}
+
+.experience-content .experience-desc {
+  background-color: #fafafa;
+  padding: 5rem;
+  width: 49%;
+  min-height: 30vh;
+  gap: 2.5rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.wrap-info-experience {
+  padding-left: 5rem;
+  float: right;
+}
+
+.wrap-info-experience h3 {
+  position: relative;
   font-weight: 400;
   font-size: 2.5rem;
+  text-align: left;
+  margin-bottom: 3rem;
+}
+
+.wrap-info-experience h3::before {
+  content: "";
+  width: 5rem;
+  height: 1px;
+  background-color: #cb9d75;
+  position: absolute;
+  top: 40%;
+  left: -100px;
+}
+
+.wrap-info-experience p {
+  font-size: 0.9rem;
+  margin-bottom: 3rem;
 }
 
 .contact {
@@ -968,10 +1036,10 @@ footer p {
   font-family: "Tinos", serif;
   border: 2px solid #020202;
   color: #020202;
-  font-size: 0.9rem;
+  font-size: 1rem;
   font-weight: 200;
   padding: 0.5rem 2rem;
-  border-radius: 2px;
+  border-radius: 3px;
   min-width: 0.7rem;
   -webkit-transition: 300ms ease-in;
   transition: 300ms ease-in;
@@ -993,11 +1061,21 @@ footer p {
   color: #020202;
 }
 
-.btn-light {
-  font-family: "Inter", sans-serif;
-  border: 2px solid #e3cab4;
-  color: #e3cab4;
-  font-size: 0.9rem;
+.btn.btn-info {
+  font-size: 1.2rem;
+  -webkit-transition: 300ms ease-in;
+  transition: 300ms ease-in;
+}
+
+.btn.btn-info:hover {
+  background-color: #020202;
+  color: #fbf6ef;
+}
+
+.btn.btn-rose {
+  border: 2px solid #cb9d75;
+  color: #cb9d75;
+  font-size: 1.2rem;
   font-weight: 200;
   padding: 0.5rem 2rem;
   border-radius: 2px;
@@ -1006,9 +1084,9 @@ footer p {
   transition: 300ms ease-in;
 }
 
-.btn-light:hover {
-  -webkit-transform: scale(1.1);
-          transform: scale(1.1);
+.btn.btn-rose:hover {
+  background-color: #cb9d75;
+  color: #fbf6ef;
 }
 
 @media (max-width: 770px) {
