--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -13,7 +13,7 @@
     justify-content: center;
 
 }
-video{
+.video-hero{
     object-fit: cover;
     height: 100%;
     width: 100%;
@@ -28,8 +28,9 @@ video{
 //* about me section
 
 .about{
-    min-height: calc(100vh - 20rem);
-   @extend %section;
+    height: 70vh;
+    @extend %section;
+    padding: 3rem;
     
     background-color: $grey;
 }
@@ -78,37 +79,67 @@ video{
 
 //* accomodation
 .accomodation{
-    min-height: 80vh;
-    color: $rose-darker;
-   
-    height: 100%;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.404), rgba(0, 0, 0, 0.511)), url("../../assets/img/chamande2.jpg");
-    // background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../../assets/img/piscine-3-booking.jpg");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-
+    min-height: 100vh;
     display: flex;
-    align-items: center;
-   
+    flex-direction: row-reverse;
+}
+.accomodation-image {
+    width: 70vw;
+    img{
+        object-fit: cover;
+        width: 100%;
+        height: 100%;
+    }
+ 
 }
 
-.accomodation-txt{
+.accomodation-info{
+    background-color: $rose;
+    min-height: 100%;
+    width: 30vw;
     
-    margin: 0 auto;
-    width: 50%;
     display: flex;
     flex-flow: column wrap;
-    padding: 2rem 2rem;
-    align-items: center;
+    justify-content: center;
+    gap: 2rem;
+    padding: 2rem 3rem;
+    
     font-family: $main-font;
+    color: $main-txt-dark;
 
-    p{
-        text-align: center;
-        
-        font-size: 1.2rem;
-        font-weight: 300;
-        margin-bottom: 1.2rem;
+    h2{
+        font-weight: 400;
+        font-size: 5rem;
+    }
+    
+    
+}
+.wrap-info{
+    // width: 80%;
+    padding-left: 5rem;
+    float: right;
+    
+    h3{
+        position: relative;
+        font-weight: 400;
+        font-size: 2.5rem;
+        text-align: left;
+        margin-bottom: 3rem;
+    }
+    h3::before {
+        content: "";
+        width: 5rem;
+        height: 1px;
+        background-color: $main-txt-dark;
+        position: absolute;
+        top: 40%;
+        left: -100px;
+      }
+
+
+    p {
+        font-size: 0.9rem;
+        margin-bottom: 3rem;
     }
 }
 
@@ -117,39 +148,46 @@ video{
 
 .experience{
     min-height: 100vh;
-    @extend %section;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 4rem 0;
     background-color: $light-pink;
-
+    
     h2{
+        position: relative;
         font-family: $main-font;
         font-weight: 400;
         font-size: 9rem;
         color: $rose-darker;
 
-        margin-top: 2rem;
-
-        position: relative;
-        left: -320px;
-        top: 35px;
-        position: relative;
-        z-index: 1;
-       
         
+      
+        right: 30rem;
+        top: 35px;
+        
+        z-index: 1;
     }
 }
 
+.wrap-experience{
+    width: 60vw;
+}
+
 .experience-content{
-    width: 80vw;
+    width: 100%;
     display: flex;
     justify-content: center;
+    
     img{
         width: 49%;
-        height: 80vh;
+        height: 50vh;
         object-fit: cover;
         object-position: center;
     }
 
-    .desc{
+    .experience-desc{
         background-color: $grey;
     
         padding: 5rem;
@@ -157,22 +195,41 @@ video{
         width: 49%;
         min-height: 30vh;
         gap:  2.5rem;
-    
-        display: flex;
-        flex-direction: column;
-        // align-items: center;
-        justify-content: center;
-        text-align: start;
 
-        h3{
-            font-weight: 400;
-            font-size: 2.5rem;
-        }
-    
-       
+        display: flex;
+        align-items: center;
+
     }
 }
 
+.wrap-info-experience {
+
+    padding-left: 5rem;
+    float: right;
+    
+    h3{
+        position: relative;
+        font-weight: 400;
+        font-size: 2.5rem;
+        text-align: left;
+        margin-bottom: 3rem;
+    }
+    h3::before {
+        content: "";
+        width: 5rem;
+        height: 1px;
+        background-color: $rose-darken;
+        position: absolute;
+        top: 40%;
+        left: -100px;
+      }
+    
+    
+    p {
+        font-size: 0.9rem;
+        margin-bottom: 3rem;
+    }
+}
 
 
 
